8249719: MethodHandle performance suffers from bad ResolvedMethodTable hash function

Reviewed-by: simonis, stuefe, coleenp